--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.goafabric</groupId>
-	<artifactId>openrewrite</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>openrewrite-recipes</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>openrewrite</name>
 	<description>Demo project for Spring Boot</description>
