--- a/rewrite.yml
+++ b/rewrite.yml
@@ -3,17 +3,18 @@ type: specs.openrewrite.org/v1beta/recipe
 name: UpgradeSpringBoot_4_0
 recipeList:
   # upgrade spring dependency
+  # upgrade spring dependency
   - org.openrewrite.gradle.plugins.UpgradePluginVersion:
       pluginIdPattern: org.springframework.boot
-      newVersion: 4.0.1
+      newVersion: 4.0.2
 
   - org.openrewrite.gradle.plugins.UpgradePluginVersion:
       pluginIdPattern: org.graalvm.buildtools.native
-      newVersion: 0.11.3
+      newVersion: 0.11.4
 
   - org.openrewrite.gradle.plugins.UpgradePluginVersion:
       pluginIdPattern: org.hibernate.orm
-      newVersion: 7.1.8.Final
+      newVersion: 7.2.1.Final
 
   # add new starters with autoconfig
   - org.openrewrite.gradle.AddDependency:
